[package]
name = "vulkan-thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
png = "0.17.11"
raw-window-handle = "0.5.2"
thiserror = "1.0.56"
winit = { version = "0.29.10", default_features = false, features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita", "rwh_05"]}
